# llm_benchmark

./: .gitignore  Cargo.toml  README.md
benches/: llm_benchmark.rs
docs/: 291p_report_latex.txt  llm_benchmark_todos.txt  llm_benchmark_understanding.txt  section1_fix_plan.txt
python_benchmark/: benchmark.py  llm_benchmark.py  model.py
src/: benchmark.rs  candle_runner.rs  config.rs  display.rs  main.rs  model.rs  prompts.rs  sections.rs  training.rs
